# Agent-Reach

./: .env.example  CHANGELOG.md  README.md  llms.txt  pyproject.toml
.codex-plugin/: plugin.json
.github/workflows/: agent-reach-smoke.yml  pytest.yml
agent_reach/: __init__.py  _version.py  batch.py  candidates.py  cli.py  client.py  config.py  doctor.py  ledger.py  operation_contracts.py  results.py  scout.py  source_hints.py
agent_reach/adapters/: __init__.py  base.py  bluesky.py  crawl4ai.py  github.py  hacker_news.py  hatena_bookmark.py  mcp_registry.py  qiita.py  rss.py  searxng.py  twitter.py  web.py
agent_reach/channels/: __init__.py  base.py  bluesky.py  crawl4ai.py  exa_search.py  github.py  hatena_bookmark.py  qiita.py  rss.py  searxng.py  twitter.py  web.py  youtube.py
agent_reach/integrations/: codex.py
agent_reach/skill/: SKILL.md
agent_reach/skill/agents/: openai.yaml
agent_reach/skill/references/: search.md  social.md  web.md
agent_reach/skills/agent-reach/: SKILL.md
agent_reach/skills/agent-reach-budgeted-research/references/: examples.md
agent_reach/skills/agent-reach-orchestrate/: SKILL.md
agent_reach/skills/agent-reach-orchestrate/agents/: openai.yaml
agent_reach/skills/agent-reach-orchestrate/references/: examples.md  orchestration-flow.md  routing-guides.md
agent_reach/skills/agent-reach-propose-improvements/: SKILL.md
agent_reach/skills/agent-reach-shape-brief/: SKILL.md
agent_reach/skills/agent-reach/agents/: openai.yaml
docs/: README_en.md  agent-reach-nexus-concept.md  agent-reach-scale-evolution-research-2026-04-10.md  codex-compatibility.md  codex-integration.md  downstream-usage.md  field-research-improvements-2026-04-10.md  install.md  python-sdk.md  troubleshooting.md
examples/: discord_news_collect.ps1  research-ledger.ps1
tests/: test_candidates.py  test_channel_contracts.py  test_channels.py  test_cli.py  test_client.py  test_collect_adapters.py  test_config.py  test_doctor.py  test_integration_artifacts.py  test_ledger.py  test_repo_hygiene.py  test_skill_suite.py  test_twitter_channel.py
(+8 files in other folders)
